# conda-package-handling

./: .authors.yml  .codacy.yml  .coveragerc  .flake8  .gitattributes  .gitignore  .mailmap  .pre-commit-config.yaml  .travis.yml  AUTHORS.md  AUTHORS.rst  AUTHORS.txt  CHANGELOG.md  CHANGELOG.rst  HOW_WE_USE_GITHUB.md  MANIFEST.in  Makefile  README.md  README.rst  RELEASE.md  appveyor.yml  pyproject.toml  requirements.txt  rever.xsh  rever_custom.xsh  rever_overrides.xsh  setup.cfg  setup.py  unzst.py  update_usage.py
.circleci/: config.yml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: 0_bug.yml  1_feature.yml  epic.yml
.github/template-files/templates/: pull_request_template_details.md
.github/workflows/: CI.yaml  CI.yml  labels.yml  lock.yml  pypi.yml  sphinx.yml  tests.yml  update.yml
conda.recipe/: conda_build_config.yaml  meta.yaml  static_bld.bat
conda_package_handling/: api.py  cli.py  conda_fmt.py  convert.py  interface.py  tarball.py  utils.py
devtools/conda-envs/: test_env.yaml
docs/: api.md  changelog.md  cli.md  conf.py  index.md  modules.md  requirements.txt
news/: 0001-Fix-args-out_folder-assumption.rst  0002-fix-binsort-mangling-symlinks.rst  0003-ci_changed_to_gha.rst  163-manifest-in  168-memory  171-zstd-size  172-info-regex  205-getcwd  206-getcwd  209-log-sha256  236-list-subcommand  248-use-zip64  251-extension-str-replace  253-components-list  254-list-remote  270-coverage  279-add-requests  301-ruff  305-compression-zstd  312-pytest9-addopts  316-cep35-info-split.md  318-track-b-b13-reuse-zipfile  42-conda-package-streaming  TEMPLATE  abspath  add-transmute-force  add_api_get_folder_location  allow_symlinks  cleanup  codegen_tests  drop-py38-py39-add-py314  exception  explicit-zstandard-dependency  fallback  fix-44.rst  fix-conda-transmute-dir-symlinks.rst  fix_null_pointer  fix_path_join_bug  hashes-in-threads.rst  improve-typing  (+32 more)
src/conda_package_handling/: _version.py  api.py  archive_utils_c.c  archive_utils_cy.pyx  cli.py  conda_fmt.py  exceptions.py  interface.py  streaming.py  tarball.py  utils.py  validate.py
tests/: conftest.py  helpers.py  memory_test.py  test_api.py  test_cli.py  test_degraded.py  test_interface.py  test_reproducibility.py  test_streaming.py  test_utils.py  test_validate.py
tests/data/: cph_test_data-0.0.1-0.tar.bz2  create_unicode_pkg.py  pkg_with_unicode.conda  pkg_with_unicode.tar.bz2
tests/data/mock-2.0.0-py37_1000/info/test/: run_test.py
tests/data/package_with_uncommon_things/symlink_stuff/: a_folder  symlink_to_empty_file  symlink_to_symlink_to_empty_file  symlink_to_symlink_to_text_file  symlink_to_text_file
tests/data/unicode-test/: meta.yaml  unicode-files.tar.bz2
tests/data/unicode-test/unicode-files/: FILE_LIST  ❤  ❤.bat
tests/recipes/cph_test_data/: build.sh
